add button before and actions "next questions" before click true/false

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="uncorrect_toast">Uncorrect!</string>
     <string name="next_button">Next</string>
     <string name="finish">Finish!</string>
+    <string name="first_question">First question</string>
     <string name="question_australia">Canberra is the capital of Australia.</string>
     <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
     <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
